crates/nexus-macros/tests/macro_compile_fail/aggregate_on_enum.stderr
error: aggregate macro only works on unit structs.
 --> tests/macro_compile_fail/aggregate_on_enum.rs:4:6
  |
4 | enum NotAStruct {
  |      ^^^^^^^^^^
