crates/nexus-macros/tests/macro_compile_fail/aggregate_on_enum.rs
/// aggregate macro must reject enums.

#[nexus::aggregate(state = (), error = (), id = ())]
enum NotAStruct {
    A,
    B,
}

fn main() {}
